--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,12 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./my-app:/usr/src/app/my-app
+      - /usr/src/app/my-app/node_modules
     stdin_open: true
     tty: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true # Enable webpack polling
+      - FAST_REFRESH=false # Disable fast refresh temporarily
+      - WDS_SOCKET_PORT=3000 # Specify WebSocket port
