--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
+    "react-toastify": "8.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
